add sections: hero, what-we-do

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
 layout: default
 ---
+{%- include home/header.html -%}
+<main>
+    {%- include home/section-hero.html -%}
+    {%- include home/section-what-we-do.html -%}
+</main>
 
-{%- include home/home.html -%}
