--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@ layout: default
 <main>
     {%- include home/section-hero.html -%}
     {%- include home/section-what-we-do.html -%}
+    {%- include home/section-why-we.html -%}
 </main>
 
