add sections: how-we-work, our-approach, about-team

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@ layout: default
     {%- include home/section-hero.html -%}
     {%- include home/section-what-we-do.html -%}
     {%- include home/section-why-we.html -%}
+    {%- include home/section-how-we-work.html -%}
+    {%- include home/section-our-approach.html -%}
+    {%- include home/section-about-team.html -%}
 </main>
 
