--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@ layout: default
     {%- include home/section-how-we-work.html -%}
     {%- include home/section-our-approach.html -%}
     {%- include home/section-about-team.html -%}
+    {%- include home/section-trust-us.html -%}
+    {%- include home/section-our-awards.html -%}
 </main>
 
