modify sizes on landing page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{%- include home/header.html -%}
+{%- include header.html -%}
 <main>
     {%- include home/section-hero.html -%}
     {%- include home/section-what-we-do.html -%}
