fix projects, contacts

--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@ layout: contact
                         </div>
                         <div class="contacts-form__item">
                             <label class="contacts-form__label">Телефон</label>
-                            <input class="contacts-form__input" type="text" placeholder="+7">
+                            <input class="contacts-form__input" type="text" placeholder="+7 (XXX) XXX-XX-XX">
                         </div>
                         <button class="btn btn--dark contacts-form__btn">Начать проект</button>
                         <p class="contacts-form__personal">Нажимая на кнопку вы даёте согласие <u>на обработку персональных данных</u></p>
