added 3d images in sections what-we-do, why-we. change contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@ layout: contact
             <h1 class="h1 contacts__title">Контакты</h1>
             <div class="contacts-content">
                 <div class="contacts__left">
-                    <h3 class="h3 contacts__adress">Карла Маркса 109-б, <nobr>Йошкар-Ола</nobr></h3>
+                    <h3 class="h3 contacts__adress">Йошкар-Ола, Карла Маркса 109-б</h3>
                     <h3 class="h3 contacts__phone">+7 (499) 350-55-75</p>
                 </div>
                 <div class="contacts__right">
