--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ layout: default
 
 <main>
     <div class="projects">
-        <div class="container">
+        <div class="projects-container">
             <div class="flex-container">
                 <h1 class="h1 projects__title">Наши проекты</h1>
                 <p class="projects__descr">
