added validattion, connect to API, refactoring in feedback form. rewrite contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -11,26 +11,16 @@ layout: contact
                     <h3 class="h3 contacts__phone">+7 (499) 350-55-75</p>
                 </div>
                 <div class="contacts__right">
-                    <h3 class="h3 contacts__right-title">Запись на консультацию</h3>
-                    <form class="contacts-form" action="">
-                        <div class="contacts-form__item">
-                            <label class="contacts-form__label">Имя</label>
-                            <input class="contacts-form__input" type="text" placeholder="Введите имя">
-                        </div>
-                        <div class="contacts-form__item">
-                            <label class="contacts-form__label">Телефон</label>
-                            <input class="contacts-form__input" type="text" placeholder="+7 (XXX) XXX-XX-XX">
-                        </div>
-                        <button class="btn btn--dark contacts-form__btn">Начать проект</button>
-                        <p class="contacts-form__personal">Нажимая на кнопку вы даёте согласие <u>на обработку персональных данных</u></p>
-                    </form>
+                    <h3 class="contacts__right-title h3">Приглашаем вас на бесплатную консультацию</h1>
+                    <p class="contacts__right-descr">После 15-минутной консультации мы составим коммерческое предложение с ориентиром по стоимости и срокам, пришлем его через 2 дня.</p>
+                    <button id="open-btn-footer" class="btn btn--dark contacts__right-btn modal-btn">Начать проект</button>
                 </div>
             </div>
             <div class="contacts__footer">
                 <p class="contacts__footer-text contacts__footer-company">© 2022 ООО «Цитрониум»</p>
                 <div class="contacts__footer-right">
-                    <p class="contacts__footer-text contacts__footer-personal">Политика обработки персональных данных</p>
-                    <p class="contacts__footer-text contacts__footer-policy">Политика конфиденциальности</p>
+                    <a href="/policy-personal-data" class="contacts__footer-text contacts__footer-personal">Политика обработки персональных данных</a>
+                    <a href="/privacy-policy" class="contacts__footer-text contacts__footer-policy">Политика конфиденциальности</a>
                 </div>
             </div>
         </div>
