modify contacts page, add loader on feedback modal, fixes

--- a/contacts.html
+++ b/contacts.html
@@ -7,20 +7,13 @@ layout: contact
             <h1 class="h1 contacts__title">Контакты</h1>
             <div class="contacts-content">
                 <div class="contacts__left">
-                    <h3 class="h3 contacts__adress">Йошкар-Ола, Карла Маркса 109-б</h3>
-                    <h3 class="h3 contacts__phone">+7 (499) 350-55-75</p>
+                    <h3 class="h3">Приглашаем вас <br/> на бесплатную консультацию</h1>
+                    <p class="contacts__left-descr">После 15-минутной консультации мы составим коммерческое предложение с ориентиром по стоимости и срокам, пришлем его через 2 дня.</p>
+                    <button id="open-btn-footer" class="btn btn--dark contacts__left-btn modal-btn">Начать проект</button>
                 </div>
                 <div class="contacts__right">
-                    <h3 class="contacts__right-title h3">Приглашаем вас на бесплатную консультацию</h1>
-                    <p class="contacts__right-descr">После 15-минутной консультации мы составим коммерческое предложение с ориентиром по стоимости и срокам, пришлем его через 2 дня.</p>
-                    <button id="open-btn-footer" class="btn btn--dark contacts__right-btn modal-btn">Начать проект</button>
-                </div>
-            </div>
-            <div class="contacts__footer">
-                <p class="contacts__footer-text contacts__footer-company">© 2022 ООО «Цитрониум»</p>
-                <div class="contacts__footer-right">
-                    <a href="/policy-personal-data" class="contacts__footer-text contacts__footer-personal">Политика обработки персональных данных</a>
-                    <a href="/privacy-policy" class="contacts__footer-text contacts__footer-policy">Политика конфиденциальности</a>
+                    <h3 class="h3 contacts__adress">Йошкар-Ола, Карла Маркса <nobr>109-б</nobr></h3>
+                    <h3 class="h3 contacts__phone">+7 (499) 350-55-75</p>
                 </div>
             </div>
         </div>
