--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ layout: default
     {%- include home/section-our-approach.html -%}
     {%- include home/section-about-team.html -%}
     {%- include home/section-trust-us.html -%}
-    {%- include home/section-our-awards.html -%}
+    <!-- {%- include home/section-our-awards.html -%} -->
 </main>
 
